# tellitto

./: COPYRIGHT  Makefile.am  README.md  VERSION  configure.ac  makepkg  tellitto.spec
tellitto/: Makefile.am  tellitto  tellitto.8  tellitto.cfg
